# C_Snippets

./: .gitignore  CMakeLists.txt  README.md  main.c
basics/: arithmetic_operators.c  assert_snippet.c  basics_defs.h  code_file_structure.c  float_double.c  struct_basic.c  typedef_struct.c  variable_number_args.c
errors/: error_defs.h  fprintf_stderr.c  perror_snippet.c  strerror_perror.c
io/: getc_snippet.c  iodefs.h  printf_decimals.c  printf_scanf_snippet.c  printf_snippet.c  puts_snippet.c  read_file_demo.c  scanf_hex_octal.c  scanf_snippet.c
math/: ceil_floor.c  mathdefs.h  modulus_snippet.c  pow_snippet.c  sqrt_snippet.c
strings/: strncmp_endswith.c  strncmp_startswith.c  textdefs.h
